--- a/twitch.html
+++ b/twitch.html
@@ -11,6 +11,8 @@
 
     <div class="container">
         <header><h1>TWITCH STREAMERS</h1></header>
+        <div class="offlineUsers"></div>
+        <div class="noAccountUsers"></div>
 
 
 
